2006-11-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* askleo/askleo.tcl: Broke out the askLEO code into a sub package.
	* choosefont/*: Broke out DKFs font selection into a sub package.
	* tkchat.tcl: Support for broken out packages.

2006-10-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support for merged ttk widgets in Tk 8.5a6. Should
	handle 8.4, 8.4+tile 0.7 and 8.5a6 now. Some widget packing bugs
	squashed too.
	* tkchat.tcl (::tkchat::proxyfilter): Use a proxyfilter to avoid
	having to add headers to every http::geturl usage.

2006-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix retrieving history when proxy disabled.

2006-10-15  Joe Mistachkin  <joe@mistachkin.com>

	* tkchat.tcl: Corrected HEADUrl.

2006-09-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Added a benign SSL certificate check to warn about
	               expired and self-signed certificates.

2006-09-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (tkchat::PasteDlg): Doh! Scrollbar hooked to old
	               invalid widget name.

2006-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Make sure we only request tile 0.7 as 0.6 doesn't
	               work with the panedwindow any more.

2006-09-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   FR 681734 - log memos to mbox file for later
	                perusal. Some font selection mods for Xft.

2006-09-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   FR 1274322 - added a dialog for sending text to
	                the paste.tclers.tk paste site. 
	* tkchat.tcl (::tkchat::LoadHistoryFromIndex): Added a base frame
	                to fix the look with tile widgets.

2006-09-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   FR 1482926 - add an /eval command to evaluate
	                short tcl scripts.
	* tkchat.tcl (::tkchat::ParseHistLog): Work around the logs being